--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "be-nc-games",
   "version": "1.0.0",
   "description": "bc-nc-games",
-  "main": "index.js",
+  "main": "listen.js",
   "scripts": {
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "node ./db/seeds/run-seed.js",
     "test": "jest",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "dev": "nodemon listen.js",
+    "seed:prod": "NODE_ENV=production DATABASE_URL=$(heroku config:get DATABASE_URL) npm run seed",
+    "start": "node listen.js"
   },
   "repository": {
     "type": "git",
@@ -21,17 +24,19 @@
   },
   "homepage": "https://github.com/northcoders/be-nc-games#readme",
   "dependencies": {
-    "dotenv": "^16.0.0",
-    "express": "^4.18.2",
-    "pg": "^8.8.0",
-    "pg-format": "^1.0.4",
-    "supertest": "^6.3.3"
-  },
-  "devDependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "husky": "^7.0.0",
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
-    "jest-sorted": "^1.0.14"
+    "jest-sorted": "^1.0.14",
+    "pg": "^8.7.3",
+    "pg-format": "^1.0.4",
+    "supertest": "^6.2.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   },
   "jest": {
     "setupFilesAfterEnv": [
