--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test": "jest",
     "prepare": "husky install",
     "dev": "nodemon listen.js",
-    "seed:prod": "NODE_ENV=production DATABASE_URL=$(heroku config:get DATABASE_URL) npm run seed",
-    "start": "node listen.js"
+    "start": "node listen.js",
+    "seed-prod": "NODE_ENV=production npm run seed"
   },
   "repository": {
     "type": "git",
