--- a/package.json
+++ b/package.json
@@ -25,18 +25,18 @@
   "homepage": "https://github.com/northcoders/be-nc-games#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "husky": "^7.0.0",
-    "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
-    "jest-sorted": "^1.0.14",
-    "pg": "^8.7.3",
-    "pg-format": "^1.0.4",
-    "supertest": "^6.2.3"
+    "pg": "^8.8.0",
+    "pg-format": "^1.0.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "jest": "^29.3.1",
+    "jest-sorted": "^1.0.14",
+    "nodemon": "^2.0.16",
+    "supertest": "^6.3.3"
   },
   "jest": {
     "setupFilesAfterEnv": [
